# FluidSimulation

./: .gitignore  .gitmodules  CMakeLists.txt  Compile.bat  FluidSimulation.sln  FluidSimulation.vcxproj  FluidSimulation.vcxproj.filters  README.md
Models/: M2A1.mtl
Shaders/: BillboardsPopulating.comp  BillboardsPopulating.spv  Compile.bat  Frag.spv  FragmentShader.frag  MarchingCubes.comp  MarchingCubesAccumulation.comp  MarchingCubesAccumulation.spv  MarchingCubesConstruction.comp  MarchingCubesConstruction.spv  MarchingCubesPresentation.comp  MarchingCubesPresentation.spv  MarchingCubesResetVoxel.comp  ParticleFragment.frag  ParticleFragment.spv  ParticleVertex.spv  ParticleVertex.vert  StandardFragment.frag  StandardFragment.spv  StandardVertex.spv  Vert.spv  VertexShader.vert
Shaders/Differentiable/: DifferentiableRayTracer.slang  MaterialUpdater.slang
Shaders/Modules/: MarchingCubesModule.slang  RenderModule.slang  SimulationModule.slang
Shaders/Presentation/: BillboardsPopulating.slang  BillboardsPopulating.spv  MarchingCubesAccumulation.comp  MarchingCubesAccumulation.slang  MarchingCubesAccumulation.spv  MarchingCubesConstruction.comp  MarchingCubesConstruction.slang  MarchingCubesConstruction.spv  MarchingCubesInitialization.comp  MarchingCubesInitialization.slang  MarchingCubesInitialization.spv  MarchingCubesResetVoxel.spv
Shaders/Rendering/: ParticleVertex.vert  ParticleVertexFragment.slang  StandardVertexFragment.slang
Shaders/Simulation/: AccumulateExternalForces.comp  AccumulateExternalForces.slang  AccumulateExternalForces.spv  AccumulatePressureAndViscosity.comp  AccumulatePressureAndViscosity.slang  AccumulatePressureAndViscosity.spv  AccumulatePressureForce.comp  AccumulatePressureForce.spv  AccumulateViscosityForce.comp  AccumulateViscosityForce.spv  ComputePressure.comp  ComputePressure.slang  ComputePressure.spv  CountingSort.comp  CountingSort.slang  CountingSort.spv  EndTimeStep.comp  EndTimeStep.slang  EndTimeStep.spv  Hashing.comp  Hashing.slang  Hashing.spv  PrefixSum.slang  PrefixSumDown.comp  PrefixSumDown.spv  PrefixSumDownState.comp  PrefixSumDownState.spv  PrefixSumTurnPhase.comp  PrefixSumTurnPhase.spv  PrefixSumUp.comp  PrefixSumUp.spv  PrefixSumUpState.comp  PrefixSumUpState.spv  ResolveCollision.comp  ResolveCollision.slang  ResolveCollision.spv  TimeIntegration.comp  TimeIntegration.slang  TimeIntegration.spv  UpdateDensity.comp  (+2 more)
Shaders/Sources/Presentation/: BillboardsPopulating.comp  MarchingCubesAccumulation.comp  MarchingCubesConstruction.comp
Shaders/Sources/Rendering/: ParticleFragment.frag  StandardVertex.vert
Shaders/Sources/Simulation/: AccumulateExternalForces.comp  AccumulatePressureAndViscosity.comp  ComputePressure.comp  Hashing.comp  PrefixSumDown.comp  TimeIntegration.comp
Sources/: BVH.cpp  BVH.h  Billboards.cpp  Billboards.h  BillboardsCompute.cpp  BillboardsCompute.h  CPUSimulatedScene.cpp  CPUSimulatedScene.h  Camera.cpp  Camera.h  ComputeBase.cpp  ComputeBase.h  Delegate.h  DescriptorHelper.cpp  DescriptorHelper.h  DirectionalLight.cpp  DirectionalLight.h  FileManager.cpp  FileManager.h  GPUSimulatedScene.cpp  GPUSimulatedScene.h  HashGrid.cpp  HashGrid.h  Kernel.cpp  Kernel.h  LeftPanel.cpp  LeftPanel.h  MainApplication.cpp  MainApplication.h  MarchingCubes.cpp  MarchingCubes.h  MarchingCubesCompute.cpp  MarchingCubesCompute.h  MarchingCubesTable.cpp  MathUtil.cpp  MathUtil.h  MeshModel.cpp  MeshModel.h  MeshObject.cpp  MeshObject.h  (+32 more)
Sources/Common/: Delegate.h
Sources/Core/: CMakeLists.txt  Camera.cpp  Camera.h  ComputeBase.cpp  ComputeBase.h  Descriptor.cpp  Descriptor.h  DescriptorHelper.cpp  DescriptorHelper.h  DirectionalLight.cpp  DirectionalLight.h  ModelBase.cpp  ModelBase.h  Pipeline.cpp  Pipeline.h  ShaderManager.cpp  ShaderManager.h  ShaderResource.cpp  ShaderResource.h  VulkanCore.cpp  VulkanCore.h  VulkanResources.cpp  VulkanResources.h
Sources/Core/Mesh/: MeshModel.cpp  MeshModel.h  MeshObject.h  RenderParameters.h  Triangle.h  Vertex.h
Sources/Core/Presentation/: Billboards.cpp  BillboardsCompute.cpp  BillboardsCompute.h  MarchingCubes.cpp  MarchingCubesCompute.cpp  MarchingCubesCompute.h  RayTracerCompute.cpp  RayTracerCompute.h
Sources/Core/Simulation/: BVH.cpp  BVH.h  HashGrid.h  Kernel.h  SimulatedSceneBase.cpp  SimulatedSceneBase.h  SimulationCompute.cpp  SimulationCompute.h  SimulationParameters.h
Sources/Core/UI/: MaterialPanel.cpp  MaterialPanel.h  PanelBase.h  RenderingPanel.cpp  SimulationPanel.cpp  SimulationPanel.h  UIModel.cpp  UIModel.h
Sources/Core/Utility/: MathUtil.cpp  MathUtil.h  VulkanUtility.cpp  VulkanUtility.h
Sources/Standalone/: CMakeLists.txt  MainApplication.cpp  MainApplication.h  main.cpp
